--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,12 +2,57 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <title>{% block title %}宝宝管理系统{% endblock %}</title>
+        {% block stylesheets %}
+            <link type="text/css" href="{{ asset('bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" media="screen">
+            <link type="text/css" href="{{ asset('bootstrap/css/bootstrap-theme.min.css') }}" rel="stylesheet" media="screen">
+            <link type="text/css" href="{{ asset('bootstrap-calendar/css/calendar.min.css') }}" rel="stylesheet" media="screen">
+        {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <style>
+            body { padding-top: 60px; }
+        </style>
     </head>
     <body>
+        {# 页头 #}
+        {% block header %}
+            <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">宝宝管理系统</a>
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                宝宝成长 <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="{{ path('rick_baby_new') }}">妈妈记录</a></li>
+                                <li><a href="#">成长日历</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="{{ path('rick_baby_profile') }}">宝宝档案</a></li>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </nav>
+        {% endblock %}
+        {# 内容栏 #}
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {# 页脚 #}
+        {% block footer %}{% endblock %}
+        {% block javascripts %}
+            <script type="application/javascript" src="{{ asset('js/jquery.min.js') }}"></script>
+            <script type="application/javascript" src="{{ asset('js/underscore.js') }}"></script>
+            <script type="application/javascript" src="{{ asset('bootstrap/js/bootstrap.min.js') }}"></script>
+            <script type="application/javascript" src="{{ asset('bootstrap-calendar/js/calendar.min.js') }}"></script>
+            <script type="application/javascript" src="{{ asset('bootstrap-calendar/js/language/zh-CN.js') }}"></script>
+        {% endblock %}
     </body>
 </html>
