添加图片上传功能

--- a/src/Rick/BabyBundle/Resources/views/Baby/profile.html.twig
+++ b/src/Rick/BabyBundle/Resources/views/Baby/profile.html.twig
@@ -1,158 +1,157 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    {{ form_start(form, {'attr': {'class': 'form-horizontal', 'novalidate': 'novalidate'}}) }}
     {{ form_errors(form) }}
-    <form class="form-horizontal" role="form">
-        <div class="form-group">
-            <div class="col-lg-9 col-lg-offset-3">
-                <img src="{{ asset('apple-touch-icon.png') }}" style="width: 140px;height: 140px;" alt="" class="img-rounded"/>
-                {{ form_widget(form.picture) }}
+        <div class="row-fluid">
+            <div class="col-lg-3">
+                <div class="form-group">
+                    <div class="col-lg-9 col-lg-offset-3">
+                        <img src="{{ asset(profile.picture) }}" alt="" class="img-responsive"/>
+                        {{ form_widget(form.file) }}
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-9">
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-lg-2 control-label">
+                        {{ form_label(form.name) }}
+                    </label>
+                    <div class="col-lg-4">
+                        {{ form_widget(form.file) }}
+                        {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-lg-2 control-label">
+                        {{ form_label(form.sex) }}
+                    </label>
+                    <div class="col-lg-4">
+                        {{ form_widget(form.sex, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-lg-2 control-label">
+                        {{ form_label(form.name_meaning) }}
+                    </label>
+                    <div class="col-lg-4">
+                        {{ form_widget(form.name_meaning, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-lg-2 control-label">
+                        {{ form_label(form.name_generated_by) }}
+                    </label>
+                    <div class="col-lg-4">
+                        {{ form_widget(form.name_generated_by, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-lg-2 control-label">
+                        {{ form_label(form.nick_name) }}
+                    </label>
+                    <div class="col-lg-4">
+                        {{ form_widget(form.nick_name, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-lg-2 control-label">
+                        {{ form_label(form.nick_name_generated_by) }}
+                    </label>
+                    <div class="col-lg-4">
+                        {{ form_widget(form.nick_name_generated_by, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-lg-2 control-label">
+                        {{ form_label(form.blood_type) }}
+                    </label>
+                    <div class="col-lg-4">
+                        {{ form_widget(form.blood_type, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-lg-2 control-label">
+                        {{ form_label(form.height) }}
+                    </label>
+                    <div class="col-lg-4">
+                        {{ form_widget(form.height, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-lg-2 control-label">
+                        {{ form_label(form.weight) }}
+                    </label>
+                    <div class="col-lg-4">
+                        {{ form_widget(form.weight, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-lg-2 control-label">
+                        {{ form_label(form.birthday) }}
+                    </label>
+                    <div class="col-lg-4">
+                        {{ form_widget(form.birthday, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-lg-2 control-label">
+                        {{ form_label(form.constellation) }}
+                    </label>
+                    <div class="col-lg-4">
+                        {{ form_widget(form.constellation, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-lg-2 control-label">
+                        {{ form_label(form.lunar_birthday) }}
+                    </label>
+                    <div class="col-lg-4">
+                        {{ form_widget(form.lunar_birthday, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-lg-2 control-label">
+                        {{ form_label(form.year_of_birth) }}
+                    </label>
+                    <div class="col-lg-4">
+                        {{ form_widget(form.year_of_birth, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-lg-2 control-label">
+                        {{ form_label(form.age_of_dad) }}
+                    </label>
+                    <div class="col-lg-4">
+                        {{ form_widget(form.age_of_dad, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-lg-2 control-label">
+                        {{ form_label(form.age_of_mum) }}
+                    </label>
+                    <div class="col-lg-4">
+                        {{ form_widget(form.age_of_mum, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-lg-2 control-label">
+                        {{ form_label(form.hospital) }}
+                    </label>
+                    <div class="col-lg-4">
+                        {{ form_widget(form.hospital, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-lg-4 col-lg-offset-3">
+                        {{ form_widget(form.submit, {'attr': {'class': 'btn btn-primary'}}) }}
+                        {{ form_widget(form.reset, {'attr': {'class': 'btn'}}) }}
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-lg-3 control-label">
-                {{ form_label(form.name) }}
-            </label>
-            <div class="col-lg-4">
-                {{ form_widget(form.picture) }}
-                {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-lg-3 control-label">
-                {{ form_label(form.sex) }}
-            </label>
-            <div class="col-lg-4">
-                {{ form_widget(form.sex, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-lg-3 control-label">
-                {{ form_label(form.name_meaning) }}
-            </label>
-            <div class="col-lg-4">
-                {{ form_widget(form.name_meaning, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-lg-3 control-label">
-                {{ form_label(form.name_generated_by) }}
-            </label>
-            <div class="col-lg-4">
-                {{ form_widget(form.name_generated_by, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-lg-3 control-label">
-                {{ form_label(form.nick_name) }}
-            </label>
-            <div class="col-lg-4">
-                {{ form_widget(form.nick_name, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-lg-3 control-label">
-                {{ form_label(form.nick_name_generated_by) }}
-            </label>
-            <div class="col-lg-4">
-                {{ form_widget(form.nick_name_generated_by, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-lg-3 control-label">
-                {{ form_label(form.blood_type) }}
-            </label>
-            <div class="col-lg-4">
-                {{ form_widget(form.blood_type, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-lg-3 control-label">
-                {{ form_label(form.height) }}
-            </label>
-            <div class="col-lg-4">
-                {{ form_widget(form.height, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-lg-3 control-label">
-                {{ form_label(form.weight) }}
-            </label>
-            <div class="col-lg-4">
-                {{ form_widget(form.weight, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-lg-3 control-label">
-                {{ form_label(form.birthday) }}
-            </label>
-            <div class="col-lg-4">
-                {{ form_widget(form.birthday, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-lg-3 control-label">
-                {{ form_label(form.constellation) }}
-            </label>
-            <div class="col-lg-4">
-                {{ form_widget(form.constellation, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-lg-3 control-label">
-                {{ form_label(form.lunar_birthday) }}
-            </label>
-            <div class="col-lg-4">
-                {{ form_widget(form.lunar_birthday, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-lg-3 control-label">
-                {{ form_label(form.year_of_birth) }}
-            </label>
-            <div class="col-lg-4">
-                {{ form_widget(form.year_of_birth, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-lg-3 control-label">
-                {{ form_label(form.age_of_dad) }}
-            </label>
-            <div class="col-lg-4">
-                {{ form_widget(form.age_of_dad, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-lg-3 control-label">
-                {{ form_label(form.age_of_mum) }}
-            </label>
-            <div class="col-lg-4">
-                {{ form_widget(form.age_of_mum, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-lg-3 control-label">
-                {{ form_label(form.hospital) }}
-            </label>
-            <div class="col-lg-4">
-                {{ form_widget(form.hospital, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-lg-3 control-label">
-                {{ form_label(form.picture) }}
-            </label>
-            <div class="col-lg-4">
-                {{ form_widget(form.picture, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-lg-4 col-lg-offset-3">
-                {{ form_widget(form.submit, {'attr': {'class': 'btn btn-primary'}}) }}
-                {{ form_widget(form.reset, {'attr': {'class': 'btn'}}) }}
-            </div>
-        </div>
-    </form>
+
+    {{ form_end(form) }}
 {% endblock %}
 
 {% block javascripts %}
