--- a/src/Rick/BabyBundle/Resources/views/Baby/new.html.twig
+++ b/src/Rick/BabyBundle/Resources/views/Baby/new.html.twig
@@ -6,22 +6,65 @@
 {% endblock %}
 
 {% block body %}
+    {{ form_start(form, {'attr': {'class': 'form-horizontal', 'novalidate': 'novalidate'}}) }}
     <div class="row-fluid">
         <div class="col-lg-3">
-            <div class="alert-info" id="calendar"></div>
-            <div class="jumbotron">
-                {% if days > 0 %}
-                <h1>
-                    <span class="label label-primary">
-                        第 <span id="days">{{ days }}</span> 天
-                    </span>
-                </h1>
-                {% else %}
-                    <h2><span class="label label-danger">宝宝还没出生呢！！</span></h2>
-                {% endif %}
+            <div class="well well-sm" id="calendar"></div>
+            <div class="well well-sm">
+                <img src="{{ asset('apple-touch-icon.png') }}" class="img-responsive">
+            </div>
+        </div>
+
+        <div class="col-lg-9">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <div class="row-fluid">
+                        <div class="form-group col-lg-6">
+                            <label class="col-lg-3 control-label" for="exampleInputEmail1">{{ form_label(form.weight) }}</label>
+                            <div class="col-lg-9">
+                                {{ form_widget(form.weight, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+                        </div>
+                        <div class="form-group col-lg-6">
+                            <label class="col-lg-3 control-label" for="exampleInputEmail1">{{ form_label(form.height) }}</label>
+                            <div class="col-lg-9">
+                                {{ form_widget(form.height, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row-fluid">
+                        <div class="form-group col-lg-6">
+                            <label class="col-lg-3 control-label" for="exampleInputEmail1">{{ form_label(form.temperature_morning) }}</label>
+                            <div class="col-lg-9">
+                                {{ form_widget(form.temperature_morning, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+                        </div>
+                        <div class="form-group col-lg-6">
+                            <label class="col-lg-3 control-label" for="exampleInputEmail1">{{ form_label(form.temperature_evening) }}</label>
+                            <div class="col-lg-9">
+                                {{ form_widget(form.temperature_evening, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row-fluid">
+                        <div class="form-group col-lg-6">
+                            <label class="col-lg-3 control-label" for="exampleInputEmail1">{{ form_label(form.is_bath) }}</label>
+                            <div class="col-lg-9">
+                                {{ form_widget(form.is_bath, {'attr': {'class': 'checkbox'}}) }}
+                            </div>
+                        </div>
+                        <div class="form-group col-lg-6">
+                            <label class="col-lg-3 control-label" for="exampleInputEmail1">{{ form_label(form.is_stroke) }}</label>
+                            <div class="col-lg-9">
+                                {{ form_widget(form.is_stroke, {'attr': {'class': 'checkbox'}}) }}
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+    {{ form_end(form) }}
 {% endblock %}
 
 {% block javascripts %}
