--- a/src/Rick/BabyBundle/Resources/views/Baby/new.html.twig
+++ b/src/Rick/BabyBundle/Resources/views/Baby/new.html.twig
@@ -62,6 +62,30 @@
                     </div>
                 </div>
             </div>
+
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    {{ form_label(form.nurses) }}
+                </div>
+                <div class="panel-body">
+                    {% for nurse in form.nurses %}
+                        <div class="row-fluid" data-prototype="{{ form_widget(form.nurses.vars.prototype)|e }}">
+                            <div class="form-group col-lg-6">
+                                <label class="col-lg-3 control-label" for="exampleInputEmail1">{{ form_label(form.temperature_morning) }}</label>
+                                <div class="col-lg-9">
+                                    {{ form_widget(nurse.nurse_time, {'attr': {'class': 'form-control'}}) }}
+                                </div>
+                            </div>
+                            <div class="form-group col-lg-6">
+                                <label class="col-lg-3 control-label" for="exampleInputEmail1">{{ form_label(form.temperature_evening) }}</label>
+                                <div class="col-lg-9">
+                                    {{ form_widget(nurse.milliliter, {'attr': {'class': 'form-control'}}) }}
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
     </div>
     {{ form_end(form) }}
